--- a/index.html
+++ b/index.html
@@ -44,33 +44,76 @@
         </nav>
     </header>
     <main>
-        <section>
-            <div class="cointainer">
+        <section class="contenido">
+            <div class="container">
                 <div class="row">
                     <div class="col-md-6">
                         <h1 class="titulo-principal">Organizzate</h1>
                         <h2 class="slogan">Ordená tus espacios y simplificá tu vida.</h2>
                         <h3 class="pitch">Te ayudo a transformar tu hogar y oficina
                             para organizar tu día a día.</h3>
-                        <button type="button" class="btn btn-dark agenda-button"><a
+                        <button type="button" class="btn btn-dark agendar-asesoria"><a
                                 class="text-light text-decoration-none" href="./pages/contacto.html">¡Agendá una
                                 asesoría!</a></button>
                     </div>
                     <div class="col-md-6">
-                        <img src="./assets/images/doublecloset.png" class="img-fluid rounded imagen-portada"
+                        <img src="./assets/images/doublecloset.png" class="img-fluid imagen-portada"
                             alt="Imagen portada organización de closet">
                     </div>
                 </div>
         </section>
     </main>
-    <footer class="container-fluid text-center footer">
-        <div class="row d-inline-flex justify-content">
-            <div>
-                <img class="col iconos-footer-img" src="./assets/images/whatsapp.png" alt="Icono Whatsapp">
-                <img class="col iconos-footer-img" src="./assets/images/instagram.png" alt="Icono Instagram">
-                <img class="col iconos-footer-img" src="./assets/images/facebook.png" alt="Icono Facebook">
-                <img class="col logo-footer" src="./assets/logos/footerwhite.png" alt="Logo Organizzate">
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="logo-footer">
+                        <img src="./assets/logos/footerwhite.png" class="logo-footer-img" alt="Logo Organizzate">
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <h3 class="footer-title">
+                        Enlaces
+                    </h3>
+                    <ul class="footer-list">
+                        <li>
+                            <a href="#" class="footer-link">Inicio</a>
+                        </li>
+                        <li>
+                            <a href="./pages/organizzate.html" class="footer-link">Organizzate</a>
+                        </li>
+                        <li>
+                            <a href="./pages/servicios.html" class="footer-link">Servicios</a>
+                        </li>
+                        <li>
+                            <a href="./pages/inspirate.html" class="footer-link">Inspirate</a>
+                        </li>
+                        <li>
+                            <a href="./pages/contacto.html" class="footer-link">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <h3 class="footer-title">
+                        Redes
+                    </h3>
+                    <ul class="footer-list">
+                        <li>
+                            <img class="iconos-footer-img" src="./assets/images/whatsapp.png" alt="Icono Whatsapp">
+                            <a href="#" class="footer-link">Whatsapp </a>
+                        </li>
+                        <li>
+                            <img class="iconos-footer-img" src="./assets/images/instagram.png" alt="Icono Instagram">
+                            <a href="#" class="footer-link">Instagram</a>
+                        </li>
+                        <li>
+                            <img class="iconos-footer-img" src="./assets/images/facebook.png" alt="Icono Facebook">
+                            <a href="./pages/servicios.html" class="footer-link">Facebook</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
