--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -44,7 +44,7 @@
         </nav>
     </header>
     <main>
-        <section class="cointainer text-center">
+        <section class="container text-center contenido">
             <div>
                 <h1 class="slogan">Te ayudo a transformar tus espacios para simplificar tu vida.</h1>
                 <h3 class="pitch">¡Agendá una asesoría!</h3>
@@ -85,14 +85,57 @@
             </div>
         </section>
     </main>
-    <footer class="container-fluid text-center footer">
-        <div class="row d-inline-flex justify-content">
-            <div>
-                <img class="col iconos-footer-img" src="../assets/images/whatsapp.png" alt="Icono Whatsapp">
-                <img class="col iconos-footer-img" src="../assets/images/instagram.png" alt="Icono Instagram">
-                <img class="col iconos-footer-img" src="../assets/images/facebook.png" alt="Icono Facebook">
-                <img class="col logo-footer" src="../assets/logos/footerwhite.png" alt="Logo Organizzate">
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="logo-footer">
+                        <img src="../assets/logos/footerwhite.png" class="logo-footer-img" alt="Logo Organizzate">
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <h3 class="footer-title">
+                        Enlaces
+                    </h3>
+                    <ul class="footer-list">
+                        <li>
+                            <a href="../index.html" class="footer-link">Inicio</a>
+                        </li>
+                        <li>
+                            <a href="./organizzate.html" class="footer-link">Organizzate</a>
+                        </li>
+                        <li>
+                            <a href="./servicios.html" class="footer-link">Servicios</a>
+                        </li>
+                        <li>
+                            <a href="./inspirate.html" class="footer-link">Inspirate</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer-link">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <h3 class="footer-title">
+                        Redes
+                    </h3>
+                    <ul class="footer-list">
+                        <li>
+                            <img class="iconos-footer-img" src="../assets/images/whatsapp.png" alt="Icono Whatsapp">
+                            <a href="#" class="footer-link">Whatsapp </a>
+                        </li>
+                        <li>
+                            <img class="iconos-footer-img" src="../assets/images/instagram.png" alt="Icono Instagram">
+                            <a href="#" class="footer-link">Instagram</a>
+                        </li>
+                        <li>
+                            <img class="iconos-footer-img" src="../assets/images/facebook.png" alt="Icono Facebook">
+                            <a href="./pages/servicios.html" class="footer-link">Facebook</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
