--- a/pages/organizzate.html
+++ b/pages/organizzate.html
@@ -44,40 +44,84 @@
         </nav>
     </header>
     <main>
-        <section class="cointainer text-center">
-            <div>
-                <h1 class="subtitulo">Conocé cómo funciona Organizzate</h1>
-                <p class="texto">Desde chica siempre disfruté de ordenar mis objetos y espacios,
-                    y gracias a esta pasión por la organización simple y funcional nació Organizzate. </p>
+        <section class="contenido">
+            <div class="container">
+                <div class="row text-center">
+                    <h1 class="subtitulo">Conocé cómo funciona Organizzate</h1>
+                    <p class="texto">Desde chica siempre disfruté de ordenar mis objetos y espacios,
+                        y gracias a esta pasión por la organización simple y funcional nació Organizzate. </p>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <img src="../assets/images/shoescloset.png" class="img-fluid imagen-organizzate"
+                            alt="Imagen portada organización de zapatos">
+                    </div>
+                    <div class="col-md-6">
+                        <ol class="listado">
+                            <li class="listado-item">Agendá una asesoría: para conocer tus necesidades y objetivos.</li>
+                            <li class="listado-item">Recibí un presupuesto estimado: según los espacios, el tiempo de organización y los
+                                productos a utilizar.</li>
+                            <li class="listado-item">Programá tu servicio de organización: incluye un plan de orden personalizado.</li>
+                            <li class="listado-item">Relajate mientras se transforma tu espacio: se te consultarán todas las dudas para
+                                dejar tus espacios totalmente organizados a tu medida.</li>
+                        </ol>
+                    </div>
+                </div>
             </div>
-            <div class="row">
-                <div class="col-sm-6">
-                    <img class="img-fluid rounded imagen-lateral" src="../assets/images/shoescloset.png"
-                        alt="Imagen portada organización de zapatos">
-                </div>
-
-                <div class="col-sm-6">
-                    <ol class="listado">
-                        <li>Agendá una asesoría: para conocer tus necesidades y objetivos.</li>
-                        <li>Recibí un presupuesto estimado: según los espacios, el tiempo de organización y los
-                            productos a
-                            utilizar.</li>
-                        <li>Programá tu servicio de organización: incluye un plan de orden personalizado.</li>
-                        <li>Relajate mientras se transforma tu espacio: se te consultarán todas las dudas para dejar tus
-                            espacios totalmente organizados a tu medida.</li>
-                    </ol>
-                </div>
             </div>
         </section>
     </main>
-    <footer class="container-fluid text-center footer">
-        <div class="row d-inline-flex justify-content">
-            <div>
-                <img class="col iconos-footer-img" src="../assets/images/whatsapp.png" alt="Icono Whatsapp">
-                <img class="col iconos-footer-img" src="../assets/images/instagram.png" alt="Icono Instagram">
-                <img class="col iconos-footer-img" src="../assets/images/facebook.png" alt="Icono Facebook">
-                <img class="col logo-footer" src="../assets/logos/footerwhite.png" alt="Logo Organizzate">
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="logo-footer">
+                        <img src="../assets/logos/footerwhite.png" class="logo-footer-img" alt="Logo Organizzate">
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <h3 class="footer-title">
+                        Enlaces
+                    </h3>
+                    <ul class="footer-list">
+                        <li>
+                            <a href="../index.html" class="footer-link">Inicio</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer-link">Organizzate</a>
+                        </li>
+                        <li>
+                            <a href="./servicios.html" class="footer-link">Servicios</a>
+                        </li>
+                        <li>
+                            <a href="./inspirate.html" class="footer-link">Inspirate</a>
+                        </li>
+                        <li>
+                            <a href="./contacto.html" class="footer-link">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <h3 class="footer-title">
+                        Redes
+                    </h3>
+                    <ul class="footer-list">
+                        <li>
+                            <img class="iconos-footer-img" src="../assets/images/whatsapp.png" alt="Icono Whatsapp">
+                            <a href="#" class="footer-link">Whatsapp </a>
+                        </li>
+                        <li>
+                            <img class="iconos-footer-img" src="../assets/images/instagram.png" alt="Icono Instagram">
+                            <a href="#" class="footer-link">Instagram</a>
+                        </li>
+                        <li>
+                            <img class="iconos-footer-img" src="../assets/images/facebook.png" alt="Icono Facebook">
+                            <a href="./pages/servicios.html" class="footer-link">Facebook</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
