--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
-
+    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Organizzate | Inicio</title>
-    <link rel="shortcut icon" href="./assets/logos/3.png" type="image/x-icon">
+    <meta name="description" content="Ordeno y organizo tus espacios para transformar y simplificar tu vida.">
+    <meta name="keywords"
+        content="orden, organización, ordenar, organizar, consejos para ordenar, organizadora profesional, ordeno tu casa, marie kondo, the home edit">
+    <link rel="shortcut icon" href="./assets/logos/headerblack.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -101,34 +104,35 @@
     <footer class="footer">
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <div class="logo-footer">
-                        <img src="./assets/logos/footerwhite.png" class="logo-footer-img" alt="Logo Organizzate">
+                        <img src="../assets/logos/footerwhite.png" class="logo-footer-img" alt="Logo Organizzate">
+                        <p class="footer-disclaimer">Todos los derechos reservados 2024.</p>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <h3 class="footer-title">
+                <div class="col-md-3">
+                    <h3 class="footer-title ps-3">
                         Enlaces
                     </h3>
-                    <ul class="footer-list">
-                        <li class=mb-2>
+                    <ul class="footer-list ps-3">
+                        <li class="mb-2">
                             <a href="#" class="footer-link">Inicio</a>
                         </li>
-                        <li class=mb-2>
+                        <li class="mb-2">
                             <a href="./pages/organizzate.html" class="footer-link">Organizzate</a>
                         </li>
-                        <li class=mb-2>
+                        <li class="mb-2">
                             <a href="./pages/servicios.html" class="footer-link">Servicios</a>
                         </li>
-                        <li class=mb-2>
+                        <li class="mb-2">
                             <a href="./pages/inspirate.html" class="footer-link">Inspirate</a>
                         </li>
-                        <li class=mb-2>
+                        <li class="mb-2">
                             <a href="./pages/contacto.html" class="footer-link">Contacto</a>
                         </li>
                     </ul>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <h3 class="footer-title ms-3">
                         Redes
                     </h3>
