--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Organizzate | Servicios</title>
-    <link rel="shortcut icon" href="./assets/logos/3.png" type="image/x-icon">
+    <meta name="description"
+        content="Ordeno y organizo tus espacios para transformar y simplificar tu vida, manteniendo el desorden a raya. Ofrezco el servicio de organización a domicilio o de organización virtual.">
+    <meta name="keywords"
+        content="orden, organización, ordenar, organizar, asesoría de organización, organizadora profesional, ordeno tu casa, ordeno tu oficina, marie kondo, the home edit, organización a domicilio, organización virtual">
+    <link rel="shortcut icon" href="../assets/logos/headerblack.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -100,34 +104,35 @@
     <footer class="footer">
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <div class="logo-footer">
                         <img src="../assets/logos/footerwhite.png" class="logo-footer-img" alt="Logo Organizzate">
+                        <p class="footer-disclaimer">Todos los derechos reservados 2024.</p>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <h3 class="footer-title">
+                <div class="col-md-3">
+                    <h3 class="footer-title ps-3">
                         Enlaces
                     </h3>
-                    <ul class="footer-list">
-                        <li class=mb-2>
+                    <ul class="footer-list ps-3">
+                        <li class="mb-2">
                             <a href="../index.html" class="footer-link">Inicio</a>
                         </li>
-                        <li class=mb-2>
+                        <li class="mb-2">
                             <a href="./organizzate.html" class="footer-link">Organizzate</a>
                         </li>
-                        <li class=mb-2>
+                        <li class="mb-2">
                             <a href="#" class="footer-link">Servicios</a>
                         </li>
-                        <li class=mb-2>
+                        <li class="mb-2">
                             <a href="./inspirate.html" class="footer-link">Inspirate</a>
                         </li>
-                        <li class=mb-2>
+                        <li class="mb-2">
                             <a href="./contacto.html" class="footer-link">Contacto</a>
                         </li>
                     </ul>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <h3 class="footer-title ms-3">
                         Redes
                     </h3>
@@ -153,7 +158,7 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>         AOS.init();       </script>
+    <script> AOS.init(); </script>
 </body>
 
 </html> 
