Corregí ruta al logo footer index

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <div>
-                        <img src="../assets/logos/footerwhite.png" class="logo-footer-img" alt="Logo Organizzate">
+                        <img src="./assets/logos/footerwhite.png" class="logo-footer-img" alt="Logo Organizzate">
                         <p class="footer-disclaimer">Todos los derechos reservados 2024.</p>
                     </div>
                 </div>
