Cerré un div que había quedado sin etiqueta de cierre

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
-    
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,8 +19,8 @@
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="./index.html"> <img class="logo-header" src="./assets/logos/headerblack.png"
-                        alt="Logo Organizzate"></a>
+                <a class="navbar-brand" href="./index.html"> <img class="logo-header"
+                        src="./assets/logos/headerblack.png" alt="Logo Organizzate"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -58,9 +58,9 @@
                             <h3 class="pitch">Te ayudo a transformar tu hogar y oficina
                                 para organizar tu día a día.</h3>
                         </div>
-                        <a role="button"
-                                class="btn btn-dark text-light text-decoration-none agendar-asesoria" href="./pages/contacto.html">¡Agendá una
-                                asesoría!</a>
+                        <a role="button" class="btn btn-dark text-light text-decoration-none agendar-asesoria"
+                            href="./pages/contacto.html">¡Agendá una
+                            asesoría!</a>
                     </div>
                     <div class="col-md-6 mt-4">
                         <div id="carouselExampleFade" class="carousel slide carousel-fade">
@@ -99,6 +99,7 @@
                         </div>
                     </div>
                 </div>
+            </div>
         </section>
     </main>
     <footer class="footer">
@@ -139,15 +140,18 @@
                     <ul class="footer-list">
                         <li>
                             <img class="iconos-footer-img" src="./assets/images/whatsapp.png" alt="Icono Whatsapp">
-                            <a rel= "noopener nofollow" href="https://www.whatsapp.com/" target="_blank" class="footer-link">Whatsapp </a>
+                            <a rel="noopener nofollow" href="https://www.whatsapp.com/" target="_blank"
+                                class="footer-link">Whatsapp </a>
                         </li>
                         <li>
                             <img class="iconos-footer-img" src="./assets/images/instagram.png" alt="Icono Instagram">
-                            <a rel= "noopener nofollow" href="https://www.instagram.com/" target="_blank" class="footer-link">Instagram</a>
+                            <a rel="noopener nofollow" href="https://www.instagram.com/" target="_blank"
+                                class="footer-link">Instagram</a>
                         </li>
                         <li>
                             <img class="iconos-footer-img" src="./assets/images/facebook.png" alt="Icono Facebook">
-                            <a rel= "noopener nofollow" href="https://www.facebook.com/" target="_blank" class="footer-link">Facebook</a>
+                            <a rel="noopener nofollow" href="https://www.facebook.com/" target="_blank"
+                                class="footer-link">Facebook</a>
                         </li>
                     </ul>
                 </div>
