--- a/pages/organizzate.html
+++ b/pages/organizzate.html
@@ -54,8 +54,8 @@
                 <div class="row text-center">
                     <div data-aos="fade-down">
                         <h1 class="subtitulo">Conocé cómo funciona Organizzate</h1>
-                        <p class="texto">Desde chica siempre disfruté de ordenar mis objetos y espacios,
-                            y gracias a esta pasión por la organización simple y funcional nació Organizzate. </p>
+                        <h2 class="texto">Desde chica siempre disfruté de ordenar mis objetos y espacios,
+                            y gracias a esta pasión por la organización simple y funcional nació Organizzate. </h2>
                     </div>
                 </div>
                 <div class="row">
@@ -115,7 +115,6 @@
                         </ol>
                     </div>
                 </div>
-            </div>
             </div>
         </section>
     </main>
