Corregí input y label for en contacto

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -61,7 +61,7 @@
                     <div class="col-md-7 mt-4">
                         <h2 class="subapartado">Contactame</h2>
                         <h3 class="texto">Enviame un mensaje con tu consulta</h3>
-                        <form action="" class="formulario">
+                        <form action="../index.html" class="formulario">
                             <div>
                                 <label for="name">Nombre y Apellido*
                                     <input required type="text" class="form-control" name="name" id="name" autocomplete="name"></label>
@@ -72,7 +72,7 @@
                             </div>
                             <div>
                                 <label for="phone">Teléfono Móvil
-                                    <input type="phone" class="form-control" name="phone" id="phone" autocomplete="tel"></label>
+                                    <input type="tel" class="form-control" name="phone" id="phone" autocomplete="tel"></label>
                             </div>
                             <div>
                                 <label for="service">Servicio a consultar
